2003-04-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (do_execute_module):
	* fvwm/fvwm.c (main):
	* libs/envvar.c (flib_putenv):
	* fvwm/builtins.c (add_to_env_list):
	(CMD_SetEnv):
	(CMD_UnsetEnv):
	fixed putenv memory leaks

	* libs/envvar.c (strIns):
	removed debug code
	reformatted file
	(flib_putenv):
	replacement for putenv without memory leaks

	* fvwm/frame.c:
	removed debug code

	* fvwm/fvwm.c (StartupStuff):
	fixed UMR
	* fvwm/add_window.c (free_window_names):
	fixed memory leaks
	* fvwm/events.c (HandlePropertyNotify):
	fixed memory leak
	* fvwm/menus.c (do_menu):
	fixed core dump
	(__mloop_exit_selected):
	safety patch
	* fvwm/menucmd.c (menu_func):
	fixed memory leak

	* fvwm/builtins.c (CMD_Destroy):
	(CMD_Close):
	call destroy_window right after XKillClient; do not wait for the window
	to die on its own

	* fvwm/menucmd.c (menu_func):
	* fvwm/windowlist.c (CMD_WindowList):
	fixed core dumps

2003-04-26  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	several updates (FvwmGtk, gettext)

2003-04-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menucmd.c (menu_func):
	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/menus.h:
	* fvwm/menus.c (is_double_click):
	(pop_menu_up):
	(pop_menu_down):
	(pop_menu_down_and_repaint_parent):
	(__mloop_get_event_timeout_loop):
	(__mloop_get_event):
	(__mloop_handle_event):
	(__mloop_select_item):
	(__mloop_make_popup):
	(__mloop_get_mi_actions):
	(__mloop_do_popup):
	(__mloop_do_menu):
	(__mloop_handle_action_with_mi):
	(__mloop_handle_action_without_mi):
	(__mloop_exit):
	(menu_enter_tear_off_menu):
	(menu_close_tear_off_menu):
	(do_menu):
	replaced the pfw and pcontext members of the MenuParameters structure
	with an execution context pointer
	(_menu_execute_function):
	wrapper function to simplyfy command execution from within menus
	(do_menu):
	fixed warping pointer to first menu item when invoked with the mouse

	* fvwm/execcontext.c:
	removed debug code
