@@ -1,3 +1,8 @@
+2003-04-28  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmIdent/FvwmIdent.c (MakeList): 
+	Fixed report of EWMH state hints 
+
 2003-04-26  Mikhael Goikhman  <migo@homemail.com>
 
 	* FvwmIconMan/*:
