@@ -1,3 +1,11 @@
+2003-04-28  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/ewmh.c (ewmh_atom_wm_state):
+	(ewmh_HandleDock):
+	* fvwm/ewmh_events.c (ewmh_WMStateStaysOnTop):
+	(ewmh_WMStateStaysOnBottom):
+	Fixed Ewmh{Use,Ignore}StackingHints style update
+
 2003-04-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/module_interface.c (do_execute_module):
